ods_ci/tests/Resources/Files/echo-service/echo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-service-route
spec:
  parentRefs:
  - name: data-science-gateway
    namespace: openshift-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - name: echo-service
      port: 8443
